[gd_scene load_steps=19 format=3 uid="uid://dmrgpg8cq51la"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_b1g6h"]
[ext_resource type="Texture2D" uid="uid://btmbmu74nqhry" path="res://Textures/Back.svg" id="2_ybson"]
[ext_resource type="Texture2D" uid="uid://1yuj650f5xs" path="res://Textures/Gear.svg" id="3_nt2uj"]
[ext_resource type="Texture2D" uid="uid://o6gdsdww0cu4" path="res://Textures/Exit.svg" id="4_2ov06"]
[ext_resource type="Texture2D" uid="uid://bvlmowqblmdgt" path="res://Textures/Down.svg" id="5_4uor1"]
[ext_resource type="Texture2D" uid="uid://hdymqqpd3vf" path="res://Textures/Up.svg" id="6_1uycb"]
[ext_resource type="Texture2D" uid="uid://dkpllak4evknm" path="res://Textures/Play.svg" id="7_ibqvd"]
[ext_resource type="Texture2D" uid="uid://fxyub7xy8ha5" path="res://Textures/Pause.svg" id="8_huu33"]
[ext_resource type="Texture2D" uid="uid://rcaxkukbqghe" path="res://Textures/Restart.svg" id="9_7njog"]
[ext_resource type="Texture2D" uid="uid://bd8t1o4bylcx0" path="res://Textures/Trash.svg" id="10_lir8u"]
[ext_resource type="Script" path="res://Scripts/Playlist.gd" id="11_dki7w"]
[ext_resource type="Script" path="res://Scripts/item.gd" id="12_v5twj"]
[ext_resource type="Texture2D" uid="uid://6v1hvd7m2vhs" path="res://Textures/t3.svg" id="13_31ld8"]
[ext_resource type="Script" path="res://Scripts/add_delay.gd" id="14_4fx0v"]
[ext_resource type="Script" path="res://Scripts/save_playlist.gd" id="15_t5ld3"]

[sub_resource type="Animation" id="Animation_4ant3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_cbmbt"]
resource_name = "Spin"
length = 20.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 20),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_avydh"]
_data = {
"RESET": SubResource("Animation_4ant3"),
"Spin": SubResource("Animation_cbmbt")
}

[node name="Menu" type="Panel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_b1g6h")

[node name="Header" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 222.0
grow_horizontal = 2
theme_override_constants/separation = 280
alignment = 1

[node name="Back" type="TextureButton" parent="Header"]
layout_mode = 2
texture_normal = ExtResource("2_ybson")
stretch_mode = 3

[node name="Settings" type="TextureButton" parent="Header"]
self_modulate = Color(0.560784, 0.737255, 0.560784, 1)
layout_mode = 2
texture_normal = ExtResource("3_nt2uj")
stretch_mode = 3

[node name="Exit" type="TextureButton" parent="Header"]
modulate = Color(0.862745, 0.0784314, 0.235294, 1)
layout_mode = 2
texture_normal = ExtResource("4_2ov06")
stretch_mode = 3

[node name="Main" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -715.0
offset_bottom = -197.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 71

[node name="Mode" type="OptionButton" parent="Main"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.498039, 0.313726, 1)
alignment = 1
expand_icon = true
selected = 0
item_count = 3
popup/item_0/text = "Path Mode"
popup/item_0/id = 2
popup/item_1/text = "Position Mode"
popup/item_1/id = 3
popup/item_2/text = "Loop Mode"
popup/item_2/id = 4

[node name="PlaylistButtons" type="HBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 117
alignment = 1

[node name="LoadPlaylist" type="Button" parent="Main/PlaylistButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Load Playlist"

[node name="SavePlaylist" type="Button" parent="Main/PlaylistButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
disabled = true
text = "Save Playlist"

[node name="PathButtons" type="HBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 175
alignment = 1

[node name="AddPath" type="Button" parent="Main/PathButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Add Path"

[node name="AddDelay" type="Button" parent="Main/PathButtons"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Add Delay"

[node name="LoopPlaylistButton" type="Button" parent="Main"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(0, 0.815686, 0.627451, 1)
theme_override_font_sizes/font_size = 54
toggle_mode = true
text = "Loop Playlist: OFF"

[node name="PathControls" type="Control" parent="Main"]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Down" type="TextureButton" parent="Main/PathControls"]
layout_mode = 0
offset_left = 46.0
offset_top = -29.5
offset_right = 169.0
offset_bottom = 39.5
texture_normal = ExtResource("5_4uor1")

[node name="Up" type="TextureButton" parent="Main/PathControls"]
layout_mode = 0
offset_left = 200.0
offset_top = -29.5
offset_right = 323.0
offset_bottom = 39.5
texture_normal = ExtResource("6_1uycb")

[node name="HBox" type="HBoxContainer" parent="Main/PathControls"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -484.0
offset_top = -57.5
offset_right = -53.0
offset_bottom = 57.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 83
alignment = 2

[node name="Play" type="TextureButton" parent="Main/PathControls/HBox"]
layout_mode = 2
texture_normal = ExtResource("7_ibqvd")
stretch_mode = 3

[node name="Pause" type="TextureButton" parent="Main/PathControls/HBox"]
visible = false
layout_mode = 2
texture_normal = ExtResource("8_huu33")
stretch_mode = 3

[node name="Restart" type="TextureButton" parent="Main/PathControls/HBox"]
visible = false
layout_mode = 2
texture_normal = ExtResource("9_7njog")
stretch_mode = 3

[node name="Delete" type="TextureButton" parent="Main/PathControls/HBox"]
layout_mode = 2
texture_normal = ExtResource("10_lir8u")
stretch_mode = 3

[node name="LoopSettings" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -446.0
offset_top = -579.0
offset_right = 452.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 65

[node name="DisplayMode" type="VBoxContainer" parent="LoopSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="LoopSettings/DisplayMode"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Stroke Speed Display:"

[node name="OptionButton" type="OptionButton" parent="LoopSettings/DisplayMode"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 54
selected = 0
item_count = 2
popup/item_0/text = "Seconds"
popup/item_1/text = "Percentage"
popup/item_1/id = 1

[node name="HSeparator" type="HSeparator" parent="LoopSettings"]
layout_mode = 2

[node name="MaxStrokeDuration" type="VBoxContainer" parent="LoopSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="LoopSettings/MaxStrokeDuration"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Max Stroke Duration:"

[node name="SpinBox" type="SpinBox" parent="LoopSettings/MaxStrokeDuration"]
layout_mode = 2
min_value = 1.0
max_value = 99999.0
step = 0.01
value = 10.0
suffix = "sec"

[node name="MinStrokeDuration" type="VBoxContainer" parent="LoopSettings"]
layout_mode = 2

[node name="Label" type="Label" parent="LoopSettings/MinStrokeDuration"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Min Stroke Duration:"

[node name="SpinBox" type="SpinBox" parent="LoopSettings/MinStrokeDuration"]
layout_mode = 2
min_value = 0.01
max_value = 9999.0
step = 0.01
value = 0.2
suffix = "sec"

[node name="Playlist" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.453646
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("11_dki7w")
metadata/_edit_use_anchors_ = true

[node name="Scroll" type="ScrollContainer" parent="Playlist"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="Playlist/Scroll"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 2

[node name="Item" type="Panel" parent="Playlist/Scroll/VBox"]
self_modulate = Color(1, 1, 1, 0.701961)
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
script = ExtResource("12_v5twj")

[node name="Label" type="Label" parent="Playlist/Scroll/VBox/Item"]
self_modulate = Color(1, 1, 1, 0.764706)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = -37.0
offset_right = 988.0
offset_bottom = 37.0
grow_vertical = 2
theme_override_font_sizes/font_size = 48
clip_text = true
text_overrun_behavior = 3

[node name="Icon" type="TextureRect" parent="Playlist/Scroll/VBox/Item"]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -77.0
offset_top = -33.0
offset_right = -10.9996
offset_bottom = 33.0
grow_horizontal = 0
grow_vertical = 2
pivot_offset = Vector2(33, 33)
mouse_filter = 2
texture = ExtResource("13_31ld8")

[node name="Button" type="TextureButton" parent="Playlist/Scroll/VBox/Item"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="Playlist/Scroll/VBox/Item"]
wait_time = 0.5
one_shot = true

[node name="Animation" type="AnimationPlayer" parent="Playlist/Scroll/VBox/Item"]
libraries = {
"": SubResource("AnimationLibrary_avydh")
}

[node name="AddDelay" type="Control" parent="."]
visible = false
self_modulate = Color(0, 1, 1, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("14_4fx0v")

[node name="Box" type="Control" parent="AddDelay"]
self_modulate = Color(0, 1, 1, 1)
layout_mode = 1
anchor_top = 0.166146
anchor_right = 1.0
anchor_bottom = 0.453125
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="HBox" type="HBoxContainer" parent="AddDelay/Box"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -204.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 115
alignment = 1

[node name="AddDelay" type="Button" parent="AddDelay/Box/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Add Delay"

[node name="Back" type="Button" parent="AddDelay/Box/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Back"

[node name="SpinBox" type="SpinBox" parent="AddDelay/Box"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.5
offset_top = -41.0
offset_right = 156.5
offset_bottom = 41.0
grow_horizontal = 2
grow_vertical = 2
min_value = 0.2
max_value = 999999.0
step = 0.01
value = 1.5

[node name="Label" type="Label" parent="AddDelay/Box"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -365.0
offset_top = -36.5
offset_right = -281.0
offset_bottom = 37.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 54
text = "sec"

[node name="Panel" type="Panel" parent="AddDelay/Box"]
modulate = Color(0.27, 0.27, 0.27, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 176.0
offset_bottom = 176.0
grow_horizontal = 2
grow_vertical = 2

[node name="SavePlaylist" type="Control" parent="."]
visible = false
self_modulate = Color(0, 1, 1, 1)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -540.0
offset_top = -641.0
offset_right = 540.0
offset_bottom = -90.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("15_t5ld3")

[node name="HBox" type="HBoxContainer" parent="SavePlaylist"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -204.0
offset_bottom = -122.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 115
alignment = 1

[node name="Save" type="Button" parent="SavePlaylist/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
disabled = true
text = "Save Playlist"

[node name="Back" type="Button" parent="SavePlaylist/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 54
text = "Back"

[node name="TextEdit" type="TextEdit" parent="SavePlaylist"]
custom_minimum_size = Vector2(0, 90)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -296.0
offset_top = -45.0
offset_right = 296.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 54

[node name="Label" type="Label" parent="SavePlaylist"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -236.0
offset_top = -37.0
offset_right = -108.0
offset_bottom = 37.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 54
text = ".bxpl"

[node name="Panel" type="Panel" parent="SavePlaylist"]
modulate = Color(0.27, 0.27, 0.27, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -210.0
offset_top = -60.0
offset_right = -12.0
offset_bottom = -5.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "App v1.1.1"

[connection signal="pressed" from="Header/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Header/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Header/Exit" to="." method="_on_Exit_pressed"]
[connection signal="item_selected" from="Main/Mode" to="." method="_on_mode_selected"]
[connection signal="pressed" from="Main/PlaylistButtons/LoadPlaylist" to="." method="_on_load_playlist_pressed"]
[connection signal="pressed" from="Main/PlaylistButtons/SavePlaylist" to="." method="_on_save_playlist_pressed"]
[connection signal="pressed" from="Main/PathButtons/AddPath" to="." method="_on_add_path_pressed"]
[connection signal="pressed" from="Main/PathButtons/AddDelay" to="." method="_on_add_delay_pressed"]
[connection signal="toggled" from="Main/LoopPlaylistButton" to="." method="_on_loop_playlist_button_toggled"]
[connection signal="pressed" from="Main/PathControls/Down" to="." method="_on_down_pressed"]
[connection signal="pressed" from="Main/PathControls/Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Main/PathControls/HBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main/PathControls/HBox/Pause" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Main/PathControls/HBox/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Main/PathControls/HBox/Delete" to="." method="_on_delete_pressed"]
[connection signal="item_selected" from="LoopSettings/DisplayMode/OptionButton" to="." method="_on_stroke_duration_display_mode_changed"]
[connection signal="value_changed" from="LoopSettings/MaxStrokeDuration/SpinBox" to="." method="_on_max_stroke_duration_changed"]
[connection signal="value_changed" from="LoopSettings/MinStrokeDuration/SpinBox" to="." method="_on_min_stroke_duration_changed"]
[connection signal="pressed" from="AddDelay/Box/HBox/AddDelay" to="AddDelay" method="_on_add_delay_pressed"]
[connection signal="pressed" from="AddDelay/Box/HBox/Back" to="AddDelay" method="_on_back_pressed"]
[connection signal="pressed" from="SavePlaylist/HBox/Save" to="SavePlaylist" method="_on_save_pressed"]
[connection signal="pressed" from="SavePlaylist/HBox/Back" to="SavePlaylist" method="_on_back_pressed"]
[connection signal="text_changed" from="SavePlaylist/TextEdit" to="SavePlaylist" method="_on_text_edit_text_changed"]
